# lfy

./: .gitignore  Makefile  README.md  README_EN.md  README_ZH.md  define.in  define.py  lfy-qt.py  lfy.in  lfy.py  meson.build  meson_options.txt
.github/ISSUE_TEMPLATE/: bug---.md
.github/workflows/: main.yml
data/: cool.ldr.lfy.in.appdata.xml  cool.ldr.lfy.in.gschema.xml  cool.ldr.lfy.in.in.desktop  cool.ldr.lfy.in.metainfo.xml  meson.build  release.md  version.json
data/gtk/: appindicator.ui  cool.ldr.lfy.gresource.xml  cool.ldr.lfy.in.appdata.xml  cool.ldr.lfy.in.gschema.xml  help-overlay.ui  lfy.cmb  meson.build  preference.ui  server-preferences.ui  theme-switcher.ui  translate.ui
data/resources/: cool.ldr.lfy.gresource.xml  cool.ldr.lfy.in.appdata.xml  help-overlay.ui  lfy.cmb  meson.build  preference.ui  server-preferences.ui  style.css  translate.ui
doc/: CHANGELOG.md  CONTRIBUTE.md  TRANSLATE.md
lfy/: __init__.py  code.py  main.py  preference.py  settings.py  translate.py
lfy/api/: __init__.py  base.py  check_update.py  constant.py  utils.py
lfy/api/server/: __init__.py  aliyun.py  baidu.py  bing.py  com.py  google.py  huoshan.py  tencent.py
lfy/api/server/ocr/: __init__.py  baidu.py  easyocr.py  l_easyocr.py  l_tesseract.py  pytesseract.py
lfy/api/server/tra/: __init__.py  aliyun.py  baidu.py  bing.py  com.py  google.py  huoshan.py  ollama.py  tencent.py
lfy/api/utils/: __init__.py  bak.py  check_update.py  notify.py  settings.py
lfy/gtk/: __init__.py  lfy.py  main.py  notify.py  preference.py  settings.py  translate.py
lfy/gtk/widgets/: server_preferences.py  theme_switcher.py
lfy/qt/: __init__.py  lfy-qt.py  lfy.py  main.py  preference.py  translate.py  tray.py  utils.py
lfy/utils/: __init__.py  bak.py  check_update.py  code.py  debug.py  settings.py
lfy/widgets/: server_preferences.py  theme_switcher.py
lt/: README.md  lt.in  lt.ldr.cool.json  meson.build
lt/data/: lt.ldr.cool.appdata.xml.in  lt.ldr.cool.desktop.in  lt.ldr.cool.gresource.xml  lt.ldr.cool.gschema.xml  lt.ldr.cool.metainfo.xml.in  meson.build
lt/data/ui/: lt.cmb  preference.ui  translate.ui
lt/lt_gtk/: main.py  preference.py  translate.py
lt/lt_gtk/api/: __init__.py  config.py  server_config.py
lt/lt_gtk/api/server/: baidu.py
lt/po/: POTFILES  meson.build  zh_CN.po
pkg/: meson.build  requirements.txt
pkg/appimage/: AppRun  meson.build
pkg/aur/: PKGBUILD  meson.build
pkg/deb/DEBIAN/: control  meson.build
pkg/flatpak/: cool.ldr.lfy.json  cool.ldr.lfy.yaml  meson.build  python3-requests.yaml  readme.md
pkg/pip/: MANIFEST.in  meson.build  pyproject.toml
pkg/rpm/SPECS/: lfy.spec  meson.build
po/: LINGUAS  POTFILES  it.po  lfy.pot  pt.po  pt_BR.po  zh_CN.po
src/: cool.ldr.lfy.json  define.in  lfy.in  meson.build
src/data/: cool.ldr.lfy.desktop.in.in  cool.ldr.lfy.gresource.xml  cool.ldr.lfy.gschema.xml.in  cool.ldr.lfy.in.appdata.xml  cool.ldr.lfy.in.gschema.xml  cool.ldr.lfy.in.in.desktop  cool.ldr.lfy.metainfo.xml.in  meson.build  version.json
src/data/resources/: cool.ldr.lfy.gresource.xml  help-overlay.ui  lfy.cmb  meson.build  preference.ui  provider-preferences.blp  server-preferences.ui  theme-switcher.ui  translate.ui
src/data/ui/: appindicator.ui  lfy.cmb  preference.ui  translate.ui
src/lfy/: main.py  preference.py  server_preferences.py  settings.py  translate.py
src/lfy/api/: __init__.py  check_update.py
src/lfy/api/server/: __init__.py  baidu.py  google.py  tencent.py  youdao.py
src/pkg/: PKGBUILD  meson.build  setup.py
src/pkg/appimage/: lfy.yml
src/pkg/aur/: PKGBUILD
src/pkg/deb/: control  meson.build
src/pkg/deb/DEBIAN/: control
src/pkg/flatpak/: cool.ldr.lfy.json  meson.build
src/pkg/pip/: setup.py
src/po/: POTFILES  zh_CN.po
