[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [@DEPS@]

name = "@APP_NAME@"
version = "@VERSION@"
description = "@APP_DES@"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

authors = [{ name = "yuhldr", email = "yuhldr@qq.com" }]


[project.urls]
"Homepage" = "@PACKAGE_URL@"
"Bug Tracker" = "@PACKAGE_URL_BUG@"

[project.scripts]
"@APP_NAME@" = "@APP_NAME@.@BUILD_TYPE@.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["@APP_NAME@*"]


[tool.setuptools.package-data]
"@APP_NAME@" = ["resources/*", "resources/locale/*/LC_MESSAGES/*"]
